# VPMS-nRF52832

./: .astylerc  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.h  linker.ld  main.c  nRF_SDK17_template.emProject
bluetooth/: bluetooth.c  bluetooth.h  bt_air.c  bt_air.h
bluetooth/service/: ble_central_user_srv.c  ble_central_user_srv.h  ble_user_srv.c  ble_user_srv.h
cmake/: nrf5.cmake  nrf5_external_libs.cmake
config/: app_config.h  sdk_config.h
module/: led_drv.c  led_drv.h  mc3632.c  mc3632.h  peripheral_drv.c  peripheral_drv.h  platform.c  platform.h  steps.c  steps.h  timedate.c  timedate.h  uevent.c  uevent.h
script/: openocd.cfg  openocd_erase.cfg  openocd_gdb.cfg  openocd_softdevice.cfg
